# rules_python_repro_gazelle_binary_rule

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
other_module/: MODULE.bazel
runfiles/: BUILD.bazel  runfiles_test.py
