load("@rules_python//python:defs.bzl", "py_test")

# gazelle:ignore
py_test(
    name = "runfiles_test",
    srcs = ["runfiles_test.py"],
    data = [
        "data/data.txt",
    ],
    env = {
        "DATA_RLOCATIONPATH": "$(rlocationpath data/data.txt)",
    },
    deps = [
        "@rules_python//python/runfiles",
    ],
)
